--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -99,11 +99,11 @@ fetch("../assets/lunr/search.json").then(
         
 //listen for search_bar
 let options = {
-      valueNames: ['title', 'author', 'year', 'greg_full' ],
+      valueNames: ['title', 'authors_display', 'year', 'greg_full' ],
       
       // Since there are no elements in the list, this will be used as template.
       item: function(values) { 
-        return `<tr id="${values.id}" onclick="expand(this, ${values.id});"><td class="year"></td><td class="author"></td><td class="title"></td><td>Expand</td></tr>`
+        return `<tr id="${values.id}" onclick="expand(this, ${values.id});"><td class="year"></td><td class="authors_display"></td><td class="title"></td><td>Expand</td></tr>`
       }
     };
 let table = new List('users', options, []);
@@ -183,7 +183,7 @@ function expand(e, id) {
   let data = item_data[id];
   if (data) {
   e.outerHTML = `
-  <tr id="${data.id}" onclick="collapse(this, ${data.id});"><td class="year">${data.year}</td><td class="author">${data.author}</td><td class="title">${data.title}</td><td>Collapse</td>
+  <tr id="${data.id}" onclick="collapse(this, ${data.id});"><td class="year">${data.year}</td><td class="authors_display">${data.authors_display}</td><td class="title">${data.title}</td><td>Collapse</td>
   
   <tr id="${data.id}-exp">
     <td colspan="5">
@@ -285,7 +285,7 @@ function collapse(e, id) {
     let data = item_data[id];
     if (data) {
       e.outerHTML = `
-      <tr id="${data.id}" onclick="expand(this, ${data.id});"><td class="year">${data.year}</td><td class="author">${data.author}</td><td class="title">${data.title}</td><td>Expand</td>`
+      <tr id="${data.id}" onclick="expand(this, ${data.id});"><td class="year">${data.year}</td><td class="authors_display">${data.authors_display}</td><td class="title">${data.title}</td><td>Expand</td>`
       let expandCard = document.getElementById(id+'-exp');
       if (expandCard) {
         expandCard.remove();
