--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -354,7 +354,7 @@ section {
   /* background-color: #f4fbfe; */
  
   background-color: #330e40;
-  background-image: url('../img/vines.svg');
+  background-image: url('../img/holly.svg');
 
   
   
