--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -267,7 +267,7 @@ function expand(e, id) {
                 Printer: ${data.stationer_printer}<br>
                 Publisher: ${data.stationer_publisher}<br>
                 Bookseller: ${data.stationer_bookseller}<br>
-                Entries in Stationers' Register: ${data.stationer_entries_in_register}<br>
+                Entries in Stationers' Register: <br>${data.stationer_entries_in_register}<br>
                 Notes: ${data.stationer_additional_notes}<br>
               </p>
             </div>
