fixed holly and removed browse

--- a/main/templates/about.html
+++ b/main/templates/about.html
@@ -1,9 +1,9 @@
  {% extends 'base.html' %}
 {% block content %}
- <section style="margin-top:100px; background-color: white;" id="about" class="team section-bg">
+ <section style="margin-top:100px;" id="about" class="team section-bg text-light">
       <div class="container">
         <div class="row">
-          <div class="section-title">
+          <div>
             <p></p>
             <h2>About</h2>
             <p></p>
@@ -18,7 +18,7 @@
           </div>
         </div>
         <div style="margin-top:100px;" class="row">
-          <div class="section-title">
+          <div>
             <p></p>
             <h2>History</h2>
             <p></p>
