--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -14,12 +14,71 @@
          
   
           <input id="search_bar" style="margin-left:10px; width:100%" type="text" name="search" placeholder="Search for a playbook...">
-        
+          <p>
+            <a class="btn btn-light float-end" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+              advanced search
+            </a>
+            
+          </p>
+          
+          <div class="collapse" style="margin-left:12px" id="collapseExample">
+            
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" id="singlePlay" value="singlePlay" checked>
+              <label class="form-check-label" for="singlePlay">Single-Play Playbooks</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" id="Collections" value="Collections" checked>
+              <label class="form-check-label" for="Collections">Collections</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" id="PlaysinCollections" value="PlaysinCollections" checked>
+              <label class="form-check-label" for="PlaysinCollections">Plays in Collection</label>
+            </div>
+            
+            <div class="input-group-md">
+              <select class="input-group form-select form-select-sm">
+              
+                <option value="">Please select...</option>
+                <option value="title">Title</option>
+                <option value="transcript_modern_spelling">All Title-Page Text (Modern Spelling)</option>
+                <option value="titlepage">All Title-Page Text (Old-Spelling)</option>
+                <option value="author">Author (Modern Attribution)</option>
+                <option value="authorpb">Author (Title-Page Attribution)</option>
+                <option value="authorstatus">Authorial Status (Title-Page Attribution)&nbsp;&nbsp;</option>
+                <option value="auspice">Company (First Production)</option>
+                <option value="company">Company (Title-Page Attribution)</option>
+                <option value="theater">Theater (Title-Page Attribution)</option>
+                <option value="playtype">Play Type</option>
+                <option value="genreharbage">Genre (Annals)</option>
+                <option value="genreplaybook">Genre (Title-Page Attribution)</option>
+                <option value="paratextual">Paratextual Material</option>
+                <option value="illustration">Illustration</option>
+                <option value="blackletter">Black Letter</option>
+                <option value="latinontitle">Latin on Title Page</option>
+                <option value="stationer">Stationer</option>
+                <option value="printer">&nbsp;&nbsp;&nbsp;&nbsp;Printer</option>
+                <option value="publisher">&nbsp;&nbsp;&nbsp;&nbsp;Publisher</option>
+                <option value="bookseller">&nbsp;&nbsp;&nbsp;&nbsp;Bookseller</option>
+                <option value="imprintlocation">Imprint Location</option>
+                <option value="dateofcomp">Date of First Production</option>
+                <option value="dateoffirsted">Date of First Edition</option>
+                <option value="format">Format</option>
+                <option value="ed_number">Edition number</option>
+                <option value="greg_number">Greg Number</option>
+                <option value="stc_or_wing">STC / Wing Number</option>
+              </select>
+              <input type="text" class="form-control" aria-label="advancedSearchField" aria-describedby="advancedSearchField">
+            </div>
+            
+            
+            
+          </div>
         </div>
       </div>
       
-      
   </div>
+  
   
 
   <div  class="row">
@@ -75,7 +134,7 @@
 
   
   {% block extra_js %}  
-  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/2.3.1/list.min.js"></script>    
 
  <script>
