shift to choices.js

--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -353,7 +353,7 @@ section {
 .section-bg {
   /* background-color: #f4fbfe; */
  
-  background-color: #330e40;
+  background-color: #671d82;
   background-image: url('../img/holly.svg');
 
   
