--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block extra_css %}
+<link href="assets/css/choices.min.css" rel="stylesheet">
+{% endblock %}
 {% block content %}
 
 <!-- ======= Search Section ======= -->
@@ -70,11 +73,7 @@
                   'genre_wiggins']) -->
                 <option value="">Please select...</option>
                 <option value="title">Title</option>
-                <option value="transcript_modern_spelling" disabled>All Title-Page Text (Modern Spelling)</option>
-                <option value="titlepage" disabled>All Title-Page Text (Old-Spelling)</option>
-                <option value="author" disabled>Author (Modern Attribution)</option>
-                <option value="authorpb" disabled>Author (Title-Page Attribution)</option>
-                <option value="authorstatus"disabled>Authorial Status (Title-Page Attribution)&nbsp;&nbsp;</option>
+                <option value="author">Author</option>
                 <option value="auspice" disabled>Company (First Production)</option>
                 <option value="company" disabled>Company (Title-Page Attribution)</option>
                 <option value="theater" disabled>Theater (Title-Page Attribution)</option>
@@ -98,6 +97,7 @@
                 <option value="stc_or_wing">STC / Wing Number</option>
               </select>
               <input id="advancedSearchField" type="text" class="form-control" aria-label="advancedSearchField" aria-describedby="advancedSearchField">
+              <select id="choicesSelect" style="z-index: auto;" class="form-control"></select>
             </div>
             
             
@@ -165,7 +165,7 @@
   {% block extra_js %}  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/2.3.1/list.min.js"></script>    
-
+  <script src="assets/js/choices.min.js"></script>    
  <script>
 
 // fetch data for all records
@@ -204,14 +204,58 @@ let groupBy = function(xs, key) {
   }, {});
 };
 
+
+const searchSelect = document.getElementById("searchSelect");
+const choicesSelect = document.getElementById("choicesSelect");
+let choices = new Choices(choicesSelect,{
+        addItems: false,
+        allowHTML: true,
+        
+        placeholder: 'Select an option',
+      })
+
+searchSelect.addEventListener('change', (event) => {
+  if (searchSelect.value === 'title') { 
+    advancedSearchField.style.display = "block";
+    choices.destroy()
+    choicesSelect.style.display = "none";
+  }
+  if (searchSelect.value === 'author') { 
+      // hide advancedSearchField
+      advancedSearchField.style.display = "none";
+      choicesSelect.style.display = "block";
+      
+      choices = new Choices(choicesSelect,{
+        addItems: false,
+        allowHTML: true,
+        placeholder: 'Select an option',
+      })
+      // change element to choices field
+      choices.setChoices(async () => {
+        try {
+          const items = await fetch('/assets/data/authors.json');
+          return items.json();
+          
+      } catch (err) {
+        console.error(err);
+      }
+      });
+    }
+  else {
+  // restore element to text field
+  //const choices = new Choices(advancedSearchField).disable()
+ 
+  };
+}) 
+ 
+
 function search() {
   table.clear();
   let query = document.querySelector('#search_bar').value;
   if (query){
     query += '~1' //fuzzy search,  1 edit distance
   }
-  
-  
+
   // handle advanced search
   // first, is advanced search on?
   let searchSelectvalue = document.getElementById('searchSelect').value
@@ -221,8 +265,9 @@ function search() {
       query += 'title:' + advancedSearchField.value ;
     }
     
+    
   }
-  console.log('query=', query);
+  
   search_results = index.search(query)
   results = []
   // logic for title-edition-record filtering 
